alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,11 @@
 
 html {
     font-size: 100%;
-} 
+}
+
+body{
+    scroll-behavior: smooth;
+}
 
 .btn{
     cursor: pointer;
